allow short prefix for legacy reasons

--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -49,6 +49,7 @@
 		<properties>
 			<property name="prefixes" type="array">
 				<element value="post_meta_inspector"/>
+				<element value="pmi"/>
 			</property>
 		</properties>
 	</rule>
